<resources>
    <string name="app_name">LMAPraktikum - DataCollector</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Einstellungen</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_load_data">Daten laden</string>
    <string name="action_save_data">Daten speichern</string>
    <string name="action_import_gpx">GPX-Datei importieren</string>
    <string name="menu_google_maps">Karte</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_location_data">Lokalisierungsdaten</string>
    <string name="menu_sensor_data">Sensordaten</string>
    <string name="menu_cdf_diagram">CDF Diagramm</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_location_header">Lokalisierung</string>


    <string name="setting_location_android_api">setting_location_android_api</string>
    <string name="setting_location_android_api_title">Lokalisierung über Android API</string>

    <string name="setting_location_fused_location_api">setting_location_fused_location_api</string>
    <string name="setting_location_fused_location_api_title">Lokalisierung über Fused Location API</string>

    <string name="setting_location_enable_gps">setting_location_enable_gps</string>
    <string name="setting_google_maps_follow_location">setting_google_maps_follow_location</string>
    <string name="setting_google_maps_zoom_factor">setting_google_maps_zoom_factor</string>
    <string name="setting_google_maps_follow_timeout">setting_google_maps_follow_timeout</string>
    <string name="setting_location_enable_network">setting_location_enable_network</string>
    <string name="setting_location_update_time">setting_location_update_time</string>
    <string name="setting_location_min_distance">setting_location_min_distance</string>
    <string name="setting_location_movement_detection">setting_location_movement_detection</string>
    <string name="setting_location_priority">setting_location_priority</string>
    <string name="setting_location_strategy">setting_location_strategy</string>
    <string name="setting_location_max_speed">setting_location_max_speed</string>
    <string name="setting_location_custom_distance_validation">setting_location_custom_distance_validation</string>
    <string name="setting_location_movement_detection_threshold">setting_location_movement_detection_threshold</string>
    <string name="setting_location_movement_detection_timeout">setting_location_movement_detection_timeout</string>
    <string name="setting_location_remote_server_address">setting_location_remote_server_address</string>
    <string name="setting_location_remote_server">setting_location_remote_server</string>
    <string name="setting_location_remote_server_context">setting_location_remote_server_context</string>

    <string name="setting_location_enable_gps_title">GPS</string>
    <string name="setting_location_enable_gps_summary_on">GPS-Ortung aktiv</string>
    <string name="setting_location_enable_gps_summary_off">keine GPS-Ortung</string>

    <string name="setting_location_enable_network_title">Netzwerk</string>
    <string name="setting_location_enable_network_summary_on">Netzwerk-Ortung aktiv</string>
    <string name="setting_location_enable_network_summary_off">keine Netzwerk-Ortung</string>

    <string name="setting_location_movement_detection_title">Bewegungserkennung</string>
    <string name="setting_location_movement_detection_summary_off">Lokalisierung ohne sensorbasierte Bewegungserkennung</string>
    <string name="setting_location_movement_detection_summary_on">Lokalisierung nur nach sensorbasierter Bewegungserkennung</string>
    <string name="setting_location_movement_detection_threshold_title">Bewegungserkennung - Schwellwert</string>
    <string name="setting_location_movement_detection_timeout_title">Bewegungserkennung - Time-Out</string>


    <string name="setting_location_custom_distance_validation_summary_off">Standard API Distanzprüfung wird verwendet</string>
    <string name="setting_location_custom_distance_validation_summary_on">Entfernung zwischen zwei Lokalisierungen werden intern geprüft</string>
    <string name="setting_location_custom_distance_validation_title">Unabhängige Distanzprüfung</string>

    <string name="setting_location_strategy_title">Strategie</string>

    <string name="setting_location_update_time_title">Aktualisierungsrate</string>
    <string name="setting_location_update_time_summary">Legt fest wieviel Zeit zwischen zwei Ortungen vergehen müssen</string>

    <string name="setting_location_min_distance_title">Distanz</string>
    <string name="setting_location_min_distance_summary">Legt die minimale Entfernung zwischen zwei Ortungen fest</string>

    <string name="setting_location_priority_title">Priorität</string>
    <string name="setting_location_max_speed_title">Höchstgeschwindigkeit (km/h)</string>

    <string name="setting_location_remote_server_context_title">Lokalisierungsserver - Kontextname</string>
    <string name="setting_location_remote_server_address_title">Lokalisierungsserver - Adresse</string>
    <string name="setting_location_remote_server_summary_off">es werden keine Lokalisierungsdaten übertragen</string>
    <string name="setting_location_remote_server_summary_on">Lokalisierungsdaten werden an den externen Server übertragen</string>
    <string name="setting_location_remote_server_title">Lokalisierungsdaten senden</string>

    <string name="setting_google_maps_header">Google Maps</string>

    <string name="setting_google_maps_zoom_factor_title">Zoomfaktor</string>
    <string name="setting_google_maps_zoom_factor_summary">Bestimmt die Größe des Kartenausschnits bei der Verfolgung</string>

    <string name="setting_google_maps_follow_location_title">Ortung verfolgen</string>
    <string name="setting_google_maps_follow_location_summary_on">Die Kamera wird automatisch auf die aktuelle Position ausgerichtet</string>
    <string name="setting_google_maps_follow_location_summary_off">keine Verfolgung aktiv</string>

    <string name="setting_google_maps_follow_timeout_title">Verfolgungstimeout</string>
    <string name="setting_google_maps_follow_timeout_summary">Bestimmt den Zeitraum nach dem nach einer manuellen Verschiebung der Karte die Verfolgung wieder aktiv wird</string>

    <string name="setting_google_maps_enable_polyline">setting_location_enable_polyline</string>
    <string name="setting_google_maps_enable_polyline_title">Route anzeigen</string>
    <string name="setting_google_maps_enable_polyline_summary_on">Eine Ortungsverlaufslinie wird angezeit</string>
    <string name="setting_google_maps_enable_polyline_summary_off">keine Route sichtbar</string>

    <string name="setting_sensor_header">Sensoren</string>
    <string name="setting_sensor_enable_gyroscope">setting_sensor_enable_gyroscope</string>
    <string name="setting_sensor_enable_gyroscope_title">Gyroscope</string>
    <string name="setting_sensor_enable_gyroscope_summary_off">keine Aufzeichnung von Drehbewegungen</string>
    <string name="setting_sensor_enable_gyroscope_summary_on">Rotationsdaten werden aufgezeichnet</string>
    <string name="setting_sensor_enable_accelerometer">setting_sensor_enable_accelerometer</string>
    <string name="setting_sensor_enable_accelerometer_title">Accelerometer</string>
    <string name="setting_sensor_enable_accelerometer_summary_on">Beschleunigungsdaten werden aufgezeichnet</string>
    <string name="setting_sensor_enable_accelerometer_summary_off">keine Aufzeichnung von Beschleunigungsdaten</string>

    <string name="setting_sensor_sampling_period">setting_sensor_sampling_rate</string>
    <string name="setting_sensor_sampling_period_title">Intervall</string>
    <string name="setting_google_maps_show_accuracy">setting_google_maps_show_accuracy</string>
    <string name="setting_google_maps_show_accuracy_title">Genauigkeit anzeigen</string>
    <string name="setting_google_maps_show_accuracy_summary_on">Die Genauigkeit wird auf der Karte dargestellt</string>
    <string name="setting_google_maps_show_accuracy_summary_off">keine Genauigkeitsanzeige</string>
    <string name="action_delete_data">Daten löschen</string>
    <string name="time">TIME</string>
    <string name="prov">PROV</string>
    <string name="lat">LAT</string>
    <string name="alt">ALT</string>
    <string name="acc">ACC</string>
    <string name="longit">longit</string>
    <string name="type" />
    <string name="name" />
    <string name="values" />
    <string name="sensordaten">Sensordaten</string>
    <string name="reset">Zurücksetzen</string>
    <string name="start">Start</string>
    <string name="next">weiter</string>
    <string name="stop">stop</string>

    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="gps">GPS</string>
    <string name="last_ts_xyz">Letzte (X,Y,Z)</string>
    <string name="current_ts_xyz">Aktuell (X,Y,Z)</string>
    <string name="last_ts_latlng">Letzte (Lat,Lng,Alt,Acc)</string>
    <string name="current_ts_latlng">Aktuell (Lat,Lng,Alt,Acc)</string>
    <string name="connection_status_disconnected">Getrennt</string>
    <string name="connection_status_connected">Verbunden</string>
</resources>
