<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/setting_google_maps_header"
        app:icon="@drawable/ic_menu_map">


        <SwitchPreferenceCompat
            app:key="@string/setting_google_maps_follow_location"
            app:summaryOff="@string/setting_google_maps_follow_location_summary_off"
            app:summaryOn="@string/setting_google_maps_follow_location_summary_on"
            app:title="@string/setting_google_maps_follow_location_title" />

        <SwitchPreferenceCompat
            app:key="@string/setting_google_maps_enable_polyline"
            app:summaryOff="@string/setting_google_maps_enable_polyline_summary_off"
            app:summaryOn="@string/setting_google_maps_enable_polyline_summary_on"
            app:title="@string/setting_google_maps_enable_polyline_title" />

        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="@string/setting_google_maps_zoom_factor"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/setting_google_maps_zoom_factor_summary"
            android:title="@string/setting_google_maps_zoom_factor_title" />

        <EditTextPreference
            android:dependency="@string/setting_google_maps_follow_location"
            android:defaultValue="0"
            android:inputType="number"
            android:key="@string/setting_google_maps_follow_timeout"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/setting_google_maps_follow_timeout_summary"
            android:title="@string/setting_google_maps_follow_timeout_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/setting_location_header"
        app:icon="@drawable/ic_location">

        <SwitchPreferenceCompat
            app:key="@string/setting_location_enable_gps"
            app:summaryOff="@string/setting_location_enable_gps_summary_off"
            app:summaryOn="@string/setting_location_enable_gps_summary_on"
            app:title="@string/setting_location_enable_gps_title" />

        <SwitchPreferenceCompat
            app:key="@string/setting_location_enable_network"
            app:summaryOff="@string/setting_location_enable_network_summary_off"
            app:summaryOn="@string/setting_location_enable_network_summary_on"
            app:title="@string/setting_location_enable_network_title" />
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="@string/setting_location_update_time"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/setting_location_update_time_summary"
            android:title="@string/setting_location_update_time_title" />
        <EditTextPreference
            android:defaultValue="0.0"
            android:inputType="numberDecimal"
            android:digits="1234567890."
            android:key="@string/setting_location_min_distance"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/setting_location_min_distance_summary"
            android:title="@string/setting_location_min_distance_title" />


    </PreferenceCategory>

    <PreferenceCategory
        app:title="Sensoren"
        app:icon="@drawable/ic_location">
        <SwitchPreferenceCompat
            app:key="setting_sensor_enable_gyroskop"
            app:summaryOff="Gyroskop deaktiviert"
            app:summaryOn="Gyroskop aktiviert"
            app:title="Gyroskop" />

        <SwitchPreferenceCompat
            app:key="setting_sensor_enable_accelerometer"
            app:summaryOff="Accelerometer deaktiviert"
            app:summaryOn="Accelerometer aktiviert"
            app:title="Accelerometer" />

        <SeekBarPreference
            app:key="setting_sensor_abtastrate"
            app:summary="Die Abtastrate wird anhand von vier Möglichkeiten ausgewählt"
            app:seekBarIncrement="1"
            app:defaultValue="1"
            app:min="0"
            android:max="3"
            app:title="Abtastrate"
        />
    </PreferenceCategory>

</PreferenceScreen>