<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save_data"
        android:orderInCategory="100"
        android:title="@string/action_save_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load_data"
        android:orderInCategory="100"
        android:title="@string/action_load_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_data"
        android:orderInCategory="100"
        android:title="@string/action_delete_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_route"
        android:orderInCategory="100"
        android:title="@string/action_delete_route"
        app:showAsAction="never" />
</menu>