<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp"
    android:stretchColumns="*">

    <TableRow android:layout_weight="1">
        <TextView
            style="@style/TableTextViewLeftStyle"
            android:text="@string/setting_sensor_sampling_period_title"/>
        <SeekBar
            style="@style/TableTextViewRightStyle"
            android:id="@+id/sbSamplingPeriod"
            android:layout_width="200dp"
            android:max="500000"
            android:min="10000" />
    </TableRow>
    <TableRow android:layout_weight="1">
        <TextView
            style="@style/TableTextViewLeftStyle"
            android:text="@string/accelerometer"/>
    </TableRow>
    <TableRow android:layout_weight="1">
        <TextView
            style="@style/TableTextViewLeftStyle"
            android:text="Abtastrate"/>
        <TextView
            android:id="@+id/tvAcceleratorSamplingRate"
            style="@style/TableTextViewRightStyle" />
    </TableRow>
    <TableRow android:layout_weight="1">
        <TextView
            style="@style/TableTextViewLeftStyle"
            android:text="@string/current_ts_xyz"/>
        <TextView
            android:id="@+id/tvAcceleratorCurrentValue"
            style="@style/TableTextViewRightStyle" />
    </TableRow>
    <TableRow android:layout_weight="1">
        <TextView
            style="@style/TableTextViewLeftStyle"
            android:text="@string/last_ts_xyz"/>
        <TextView
            android:id="@+id/tvAcceleratorLastValue"
            style="@style/TableTextViewRightStyle" />
    </TableRow>
    <TableRow android:layout_weight="1">
        <TextView
            style="@style/TableTextViewLeftStyle"
            android:text="@string/gyroscope"/>
    </TableRow>
    <TableRow android:layout_weight="1">
        <TextView
            style="@style/TableTextViewLeftStyle"
            android:text="Abtastrate"/>
        <TextView
            android:id="@+id/tvGyroscopeSamplingRate"
            style="@style/TableTextViewRightStyle" />
    </TableRow>
    <TableRow android:layout_weight="1">
        <TextView
            style="@style/TableTextViewLeftStyle"
            android:text="@string/current_ts_xyz"/>
        <TextView
            android:id="@+id/tvGyroscopeCurrentValue"
            style="@style/TableTextViewRightStyle" />
    </TableRow>
    <TableRow android:layout_weight="1">
        <TextView
            style="@style/TableTextViewLeftStyle"
            android:text="@string/last_ts_xyz"/>
        <TextView
            android:id="@+id/tvGyroscopeLastValue"
            style="@style/TableTextViewRightStyle" />
    </TableRow>
    <TableRow android:layout_weight="1">
        <TextView
            style="@style/TableTextViewLeftStyle"
            android:text="@string/gps"/>
    </TableRow>
    <TableRow android:layout_weight="1">
        <TextView
            style="@style/TableTextViewLeftStyle"
            android:text="Abtastrate"/>
        <TextView
            android:id="@+id/tvGpsSamplingRate"
            style="@style/TableTextViewRightStyle" />
    </TableRow>
    <TableRow android:layout_weight="1">
        <TextView
            style="@style/TableTextViewLeftStyle"
            android:text="@string/current_ts_latlng"/>
        <TextView
            android:id="@+id/tvGpsCurrentValue"
            style="@style/TableTextViewRightStyle" />
    </TableRow>
    <TableRow android:layout_weight="1">
        <TextView
            style="@style/TableTextViewLeftStyle"
            android:text="@string/last_ts_latlng"/>
        <TextView
            android:id="@+id/tvGpsLastValue"
            style="@style/TableTextViewRightStyle" />
    </TableRow>


</TableLayout>