<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_loRowTime"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ellipsize="end"
            android:padding="4dp"
            android:singleLine="true"
            android:text="@string/time" />

        <TextView
            android:id="@+id/tv_loRowProv"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:padding="4dp"
            android:singleLine="true"
            android:text="@string/prov" />

        <TextView
            android:id="@+id/tv_loRowLat"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:ellipsize="end"
            android:padding="4dp"
            android:singleLine="true"
            android:text="@string/lat" />

        <TextView
            android:id="@+id/tv_loRowLongit"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:ellipsize="end"
            android:padding="4dp"
            android:singleLine="true"
            android:text="@string/longit" />

        <TextView
            android:id="@+id/tv_loRowAlt"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:ellipsize="end"
            android:padding="4dp"
            android:singleLine="true"
            android:text="@string/alt" />

        <TextView
            android:id="@+id/tv_loRowAcc"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:padding="4dp"
            android:singleLine="true"
            android:text="@string/acc" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>