<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="de.krd.lmapraktikum_datacollector.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_nav_home_to_nav_google_maps"
            app:destination="@id/nav_google_maps" />
        <action
            android:id="@+id/action_nav_home_to_locationDataFragment"
            app:destination="@id/nav_location_data" />
        <action
            android:id="@+id/action_nav_home_to_nav_settings2"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_home_to_sensorDataFragment"
            app:destination="@id/nav_sensor_data" />
        <action
            android:id="@+id/action_nav_home_to_nav_cdf"
            app:destination="@id/nav_cdf" />
    </fragment>

    <fragment
        android:id="@+id/nav_google_maps"
        android:name="de.krd.lmapraktikum_datacollector.ui.google_maps.GoogleMapsFragment"
        android:label="@string/menu_google_maps"
        tools:layout="@layout/fragment_google_maps" >
        <action
            android:id="@+id/action_nav_google_maps_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="de.krd.lmapraktikum_datacollector.ui.settings.SettingsFragment"
        android:label="@string/menu_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_location_data"
        android:name="de.krd.lmapraktikum_datacollector.ui.location_data.LocationDataFragment"
        android:label="@string/menu_location_data"
        tools:layout="@layout/fragment_location_data" >
        <action
            android:id="@+id/action_locationDataFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="de.krd.lmapraktikum_datacollector.ui.settings.SettingsFragment"
        android:label="@string/menu_settings" >
        <action
            android:id="@+id/action_nav_settings_to_nav_home2"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_sensor_data"
        android:name="de.krd.lmapraktikum_datacollector.ui.sensor_data.SensorDataFragment"
        android:label="@string/menu_sensor_data" >
        <action
            android:id="@+id/action_nav_settings_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_cdf"
        android:name="de.krd.lmapraktikum_datacollector.ui.cdf.CdfFragment"
        android:label="@string/menu_cdf_diagram" >
        <action
            android:id="@+id/action_nav_cdf_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>