<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_loRowTime"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="4dp"
            android:singleLine="true"
            android:text="@string/time" />

        <TextView
            android:id="@+id/tv_loRowType"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:padding="4dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/type" />

        <TextView
            android:id="@+id/tv_loRowValueX"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:ellipsize="end"
            android:padding="4dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/values" />
        <TextView
            android:id="@+id/tv_loRowValueY"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:ellipsize="end"
            android:padding="4dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/values" />
        <TextView
            android:id="@+id/tv_loRowValueZ"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:ellipsize="end"
            android:padding="4dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/values" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>